:bug: Fix top arrow on tooltip not showing on desktop

--- a/src/components/configuration/configuration.scss
+++ b/src/components/configuration/configuration.scss
@@ -30,6 +30,18 @@
   box-shadow: 0px 0px 8px 1px #b0b0b0;
   z-index: 100;
   position: relative;
+
+  &:before {
+    content:"";
+    position: absolute;
+    height: 0px;
+    width: 0px;
+    left: 111px;
+    top: -29px; /* 1px buffer for zooming problems while rendering*/
+    border-width: 15px;
+    border-color: transparent transparent white transparent;
+    border-style: solid;
+  }
 }
 
 .wrapper {
